--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,24 +104,21 @@ footer .menu-menu-footer-container ul li a {
 }
 
 .modale {
-  display: block;
-  opacity: 0;
+  display: none;
   position: fixed;
   z-index: 99;
   left: 0;
   top: 0;
   width: 100%;
-  height: 0;
-  overflow: auto;
+  height: 100%;
   background-color: black;
-  background-color: rgba(0, 0, 0, 0.4);
-  transition: opacity 1s ease-out;
+  background-color: rgba(49, 49, 68, 0.4);
 }
 .modale .modale-content {
   padding-top: 5px;
   padding-bottom: 10px;
   background-color: white;
-  margin: 15% auto;
+  margin: 5% auto;
   border: 5px solid black;
   width: 597px;
   border-radius: 5px;
@@ -139,20 +136,158 @@ footer .menu-menu-footer-container ul li a {
   width: 263px;
   height: 40px;
   border-radius: 8px;
-  border: 1px solid #B8BBC2;
+  border: 1px solid #c4c4c4;
   font-size: 12px;
   font-weight: 400;
   font-family: "Space Mono";
+}
+.modale #formulaire .wpcf7-submit {
+  width: 265px;
+}
+.modale #formulaire .wpcf7-submit:hover {
+  border: 2px solid black;
+  transform: scale(1.2);
+  transition: all 0.3s ease-in;
 }
 .modale #formulaire textarea {
   width: 263px;
   height: 210px;
   border-radius: 8px;
-  border: 1px solid #B8BBC2;
+  border: 1px solid #c4c4c4;
+}
+
+.contenu-page-photo {
+  margin-bottom: 50px;
+}
+.contenu-page-photo .photo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  padding-top: 50px;
+}
+.contenu-page-photo .photo-container .infos {
+  flex: 0 0 50%;
+  border-bottom: 1px solid black;
+  margin-right: 10px;
+  padding-bottom: 20px;
+}
+.contenu-page-photo .photo-container .photo {
+  flex: 0 0 50%;
+}
+.contenu-page-photo .photo-container .photo img {
+  padding: 5px;
+  object-fit: contain;
+  width: 98%;
+  height: 98%;
+}
+.contenu-page-photo .description-photo {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: "Space Mono";
+}
+.contenu-page-photo .interaction {
+  height: 118px;
+  border-bottom: 1px solid black;
+  display: flex;
+  flex-direction: row;
+}
+.contenu-page-photo .interaction #contact {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex: 0 0 50%;
+  justify-content: space-between;
+}
+.contenu-page-photo .interaction #contact .show-modale-contact {
+  background-color: #c4c4c4;
+  width: 272px;
+  height: 50px;
+  text-align: center;
+  border-radius: 2px;
+  line-height: 50px;
+  text-decoration: none;
+  color: black;
+  font-family: "Space Mono";
+  font-size: 12px;
+}
+.contenu-page-photo .interaction #contact .show-modale-contact:hover {
+  border: 2px solid #313144;
+}
+.contenu-page-photo .interaction .navigation {
+  flex: 0 0 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: end;
+}
+.contenu-page-photo .interaction .navigation .tooltips {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.contenu-page-photo .interaction .navigation .tooltips #tooltip-precedent,
+.contenu-page-photo .interaction .navigation .tooltips #tooltip-suivant {
+  width: 81;
+  height: 71;
+  position: absolute;
+  margin-bottom: 25px;
+  margin-right: 100px;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+.contenu-page-photo .interaction .navigation .tooltips #tooltip-precedent img,
+.contenu-page-photo .interaction .navigation .tooltips #tooltip-suivant img {
+  object-fit: cover;
+}
+.contenu-page-photo .interaction .navigation .links {
+  margin-top: 25px;
+}
+.contenu-page-photo .interaction .navigation .links .fleche-btn {
+  padding: 10px;
+}
+.contenu-page-photo .interaction .navigation .links .fleche-btn img {
+  transition: all 0.3s ease-in-out;
+}
+.contenu-page-photo .interaction .navigation .links .fleche-btn img:hover {
+  transform: scale(2);
 }
 
 body {
   margin: 0;
+}
+body main {
+  width: 80%;
+  margin: auto;
+}
+
+h1 {
+  font-family: "SpaceMono";
+  font-size: 96px;
+  font-style: italic;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-family: "SpaceMono";
+  font-size: 66px;
+  font-style: italic;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+h3 {
+  font-family: "SpaceMono";
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+p {
+  font-family: "Poppins";
+  font-size: 14px;
+  font-weight: 300;
 }
 
 /*# sourceMappingURL=main.css.map */
