--- a/scss/partials/modale.scss
+++ b/scss/partials/modale.scss
@@ -1,22 +1,21 @@
+@use './variables.scss';
+
 .modale {
-    display: block;
-    opacity: 0;
+    display: none;
     position: fixed;
     z-index: 99;
     left:0;
     top:0;
     width: 100%;
-    height: 0;
-    overflow : auto;
+    height: 100%;
     background-color: black;
-    background-color: rgb(0,0,0,0.4);
-    transition: opacity 1s ease-out;
+    background-color: rgba(variables.$color-gris-1,0.4);
 
     .modale-content {
         padding-top: 5px;
         padding-bottom: 10px;
         background-color: white;
-        margin: 15% auto;
+        margin: 5% auto;
         border: 5px solid black;
         width: 597px;
         border-radius: 5px;
@@ -34,16 +33,24 @@
             width: 263px;
             height: 40px;
             border-radius: 8px;
-            border: 1px solid #B8BBC2;
+            border: 1px solid variables.$color-gris-2;
             font-size: 12px;
             font-weight: 400;
             font-family: 'Space Mono';
+        }
+        .wpcf7-submit {
+            width: 265px;
+            &:hover {
+                border: 2px solid black;
+                transform: scale(1.2);
+                transition: all 0.3s ease-in;
+            }
         }
         textarea {
             width: 263px;
             height: 210px;
             border-radius: 8px;
-            border: 1px solid #B8BBC2;
+            border: 1px solid variables.$color-gris-2;
         }
     }
 }
