--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -14,7 +14,7 @@ body {
 }
 
 h1 {
-    font-family: 'SpaceMono';
+    font-family: 'Space Mono';
     font-size: 96px;
     font-style: italic;
     font-weight: 700;
@@ -22,7 +22,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'SpaceMono';
+    font-family: 'Space Mono';
     font-size: 66px;
     font-style: italic;
     text-transform: uppercase;
@@ -30,7 +30,7 @@ h2 {
 }
 
 h3 {
-    font-family: 'SpaceMono';
+    font-family: 'Space Mono';
     font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
