--- a/scss/partials/photo.scss
+++ b/scss/partials/photo.scss
@@ -106,12 +106,21 @@
 
                     img {
                         transition: all 0.3s ease-in-out;
+
                         &:hover {
                             transform: scale(2);
                         }
                     }
                 }
             }
+        }
+    }
+
+    .suggestions {
+        .photos {
+            display: flex;
+            display: row;
+            justify-content: space-around;
         }
     }
 
