--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -3,6 +3,7 @@
 @use 'partials/footer.scss';
 @use 'partials/modale.scss';
 @use 'partials/photo.scss';
+@use 'partials/part_photo.scss';
 
 body {
     margin: 0;
@@ -19,6 +20,7 @@ h1 {
     font-style: italic;
     font-weight: 700;
     text-transform: uppercase;
+    line-height: 100%;
 }
 
 h2 {
@@ -27,6 +29,7 @@ h2 {
     font-style: italic;
     text-transform: uppercase;
     font-weight: 400;
+    line-height: 58px;
 }
 
 h3 {
@@ -34,10 +37,30 @@ h3 {
     font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
+    line-height: 100%;
 }
 
 p {
     font-family: 'Poppins';
     font-size: 14px;
     font-weight: 300;
+    line-height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+
+
+    h1 {
+        font-size: 27.59px;
+    }
+
+    h2 {
+        font-size: 46px;
+        line-height: 48px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+
 }
