--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,6 +157,8 @@ footer .menu-menu-footer-container ul li a {
 }
 
 .contenu-page-photo {
+  width: 80%;
+  margin: auto;
   margin-bottom: 50px;
 }
 .contenu-page-photo .photo-infos {
@@ -302,12 +304,65 @@ footer .menu-menu-footer-container ul li a {
   object-fit: cover;
 }
 
+.hero {
+  width: 100%;
+  position: relative;
+  display: grid;
+}
+.hero h1 {
+  grid-row: 1;
+  grid-column: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px white;
+}
+
+.hero-img {
+  grid-row: 1;
+  grid-column: 1;
+  width: 100%;
+  position: relative;
+}
+.hero-img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+section,
+.hero img {
+  animation: section-fade-in-up 2s 0ms ease-in-out both;
+}
+
+.hero {
+  animation: section-fade-in-down 2s 0ms ease-in-out both;
+}
+
+@keyframes section-fade-in-up {
+  0% {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes section-fade-in-down {
+  0% {
+    transform: translateY(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 body {
   margin: 0;
-}
-body main {
-  width: 80%;
-  margin: auto;
 }
 
 h1 {
