--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,7 +258,8 @@ footer .menu-menu-footer-container ul li a {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(2, 1fr);
-  gap: 5%;
+  gap: 2vh;
+  justify-items: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -289,9 +290,8 @@ footer .menu-menu-footer-container ul li a {
 }
 .photo-container {
   width: 100%;
-  max-width: 500px;
-  max-height: 500px;
-  object-fit: contain;
+  height: 60vh;
+  object-fit: cover;
 }
 .photo-container .photo-image {
   width: 100%;
@@ -308,6 +308,7 @@ footer .menu-menu-footer-container ul li a {
   width: 100%;
   position: relative;
   display: grid;
+  margin-bottom: 25px;
 }
 .hero h1 {
   grid-row: 1;
@@ -330,6 +331,17 @@ footer .menu-menu-footer-container ul li a {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.all-photos {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2vh;
+  width: 80%;
+  justify-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
 }
 
 section,
