--- a/scss/partials/front-page.scss
+++ b/scss/partials/front-page.scss
@@ -1,7 +1,10 @@
+@use './variables.scss';
+
 .hero {
     width: 100%;
     position: relative;
     display: grid;
+    margin-bottom: 25px;
 
     h1 {
         grid-row: 1;
@@ -27,3 +30,17 @@
         object-fit: contain;
     }
 }
+
+.all-photos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2vh;
+    width: 80%;
+    justify-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
+
+
+}
+
