--- a/scss/partials/front-page.scss
+++ b/scss/partials/front-page.scss
@@ -31,7 +31,7 @@
     }
 }
 
-.all-photos {
+#all-photos {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2vh;
@@ -44,3 +44,26 @@
 
 }
 
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
+        width: 270px;
+        height: 50px;
+        background-color: variables.$color-gris-3;
+        border-radius: 2px;
+        text-decoration: none;
+        color: black;
+        font-family: 'Space Mono';
+        font-size: 12px;
+        text-align: center;
+        align-content: center;
+
+        &:hover {
+            border: 2px solid variables.$color-gris-1
+        }
+        
+    }
+    padding-bottom: 25px;
+}
