intégration d'une lightbox

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -6,6 +6,7 @@
 @use 'partials/part_photo.scss';
 @use 'partials/front-page.scss';
 @use 'partials/animation.scss';
+@use 'partials/lightbox.scss';
 
 body {
     margin: 0;
