--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -289,6 +289,7 @@ footer .menu-menu-footer-container ul li a {
   }
 }
 .photo-container {
+  position: relative;
   width: 100%;
   height: 60vh;
   object-fit: cover;
@@ -303,7 +304,50 @@ footer .menu-menu-footer-container ul li a {
   height: 100%;
   object-fit: cover;
 }
+.photo-container .photo-actions {
+  display: none;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  border: 1px solid black;
+  background-color: rgba(196, 196, 196, 0.6);
+  padding-top: 5px;
+}
+.photo-container .photo-actions button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  transition: scale 0.3s;
+}
+.photo-container .photo-actions button:hover {
+  scale: 1.2;
+}
+.photo-container .photo-actions button img {
+  width: 20px;
+}
+.photo-container .photo-infos {
+  font-family: "Poppins";
+  font-size: 12px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.9);
+  border-radius: 8px;
+  padding: 10px;
+  position: absolute;
+  left: 30px;
+  top: 60px;
+  display: none;
+  opacity: 0;
+  animation: infos-fade-in 0.3s ease-in-out;
+}
 
+@keyframes infos-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .hero {
   width: 100%;
   position: relative;
@@ -510,6 +554,99 @@ section,
   }
   100% {
     transform: translateY(0);
+    opacity: 1;
+  }
+}
+.lightbox {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 100;
+  animation: lightboxFadeIn 0.5s ease-in-out;
+}
+.lightbox button {
+  opacity: 0.5;
+  cursor: pointer;
+  z-index: 101;
+  position: fixed;
+  transition: 0.3s ease-in-out;
+}
+.lightbox button:hover {
+  opacity: 1;
+  scale: 1.2;
+}
+.lightbox-close {
+  background: url(../images/croix-blanche-lightbox.svg) center center/100% 100%;
+  width: 22px;
+  height: 22px;
+  border: none;
+  text-indent: -30000px;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+}
+.lightbox-next, .lightbox-prev {
+  border: none;
+  background-color: transparent;
+  color: white;
+  top: 50%;
+  margin-top: -10px;
+  transition: scale 0.3s ease-in-out;
+  height: 20px;
+  font-family: "Space Mono";
+  font-size: "12px";
+}
+.lightbox-next {
+  right: 20px;
+}
+.lightbox-next:after {
+  content: url(../images/fleche-lightbox-next.svg);
+  padding-left: 5px;
+}
+.lightbox-prev {
+  left: 20px;
+}
+.lightbox-prev:before {
+  content: url(../images/fleche-lightbox-prev.svg);
+  padding-right: 5px;
+}
+.lightbox-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 50px;
+  height: 80vh;
+  object-fit: contain;
+}
+.lightbox-container img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.lightbox .infos-photo {
+  margin-left: 150px;
+  margin-right: 150px;
+  display: flex;
+  flex-direction: row;
+  color: white;
+  font-family: "Poppins";
+  font-size: 14px;
+  text-transform: uppercase;
+}
+.lightbox .infos-photo .categorie {
+  margin-left: auto;
+}
+
+@keyframes lightboxFadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
     opacity: 1;
   }
 }
