--- a/scss/partials/part_photo.scss
+++ b/scss/partials/part_photo.scss
@@ -1,4 +1,7 @@
+@use './variables.scss';
+
 .photo-container {
+    position: relative;
     width: 100%;
     height: 60vh;
     object-fit: cover;
@@ -14,4 +17,51 @@
         }
         
     }
+    .photo-actions {
+        display: none;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        border: 1px solid black;
+        background-color: rgba(variables.$color-gris-2, 0.6);
+        padding-top:5px ;
+        button {
+            border : none;
+            background-color: transparent;
+            cursor: pointer;
+            transition: scale 0.3s;
+            &:hover {
+                scale: 1.2;
+            }
+            img {
+
+            width: 20px;
+            }
+        }
+    }
+
+    .photo-infos {
+        font-family: "Poppins";
+        font-size: 12px;
+        color: white;
+        background-color: rgba(black,0.9);
+        border-radius: 8px;
+        padding: 10px;
+        position: absolute;
+        left: 30px;
+        top: 60px;
+        display: none;
+        opacity: 0;
+        animation: infos-fade-in 0.3s ease-in-out;
+        
+    }
+}
+
+@keyframes infos-fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    } 
 }
