--- a/scss/partials/part_photo.scss
+++ b/scss/partials/part_photo.scss
@@ -5,18 +5,20 @@
     width: 100%;
     height: 60vh;
     object-fit: cover;
+
     .photo-image {
         width: 100%;
         height: 100%;
 
         img {
-            cursor: pointer;    
+            cursor: pointer;
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
-        
+
     }
+
     .photo-actions {
         display: none;
         position: absolute;
@@ -24,18 +26,21 @@
         left: 20px;
         border: 1px solid black;
         background-color: rgba(variables.$color-gris-2, 0.6);
-        padding-top:5px ;
+        padding-top: 5px;
+
         button {
-            border : none;
+            border: none;
             background-color: transparent;
             cursor: pointer;
             transition: scale 0.3s;
+
             &:hover {
                 scale: 1.2;
             }
+
             img {
 
-            width: 20px;
+                width: 20px;
             }
         }
     }
@@ -44,7 +49,7 @@
         font-family: "Poppins";
         font-size: 12px;
         color: white;
-        background-color: rgba(black,0.9);
+        background-color: rgba(black, 0.9);
         border-radius: 8px;
         padding: 10px;
         position: absolute;
@@ -53,7 +58,16 @@
         display: none;
         opacity: 0;
         animation: infos-fade-in 0.3s ease-in-out;
-        
+
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .photo-container {
+
+        .photo-actions {
+            display: block;
+        }
     }
 }
 
@@ -61,7 +75,8 @@
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
-    } 
+    }
 }
