--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,10 +409,11 @@ footer .menu-menu-footer-container ul li a {
 .photo-container .photo-actions {
   display: none;
   position: absolute;
-  top: 20px;
-  left: 20px;
-  border: 1px solid black;
-  background-color: rgba(196, 196, 196, 0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
   padding-top: 5px;
 }
 .photo-container .photo-actions button {
@@ -421,38 +422,40 @@ footer .menu-menu-footer-container ul li a {
   cursor: pointer;
   transition: scale 0.3s;
 }
+.photo-container .photo-actions button.btn-lightbox {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.photo-container .photo-actions button.btn-infos {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+}
 .photo-container .photo-actions button:hover {
   scale: 1.2;
 }
 .photo-container .photo-actions button img {
   width: 20px;
 }
-.photo-container .photo-infos {
+.photo-container .photo-legende {
   font-family: "Poppins";
   font-size: 12px;
   color: white;
-  background-color: rgba(0, 0, 0, 0.9);
-  border-radius: 8px;
-  padding: 10px;
   position: absolute;
-  left: 30px;
-  top: 60px;
-  display: none;
-  opacity: 0;
-  animation: infos-fade-in 0.3s ease-in-out;
+  left: 0px;
+  bottom: 0px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.photo-container .photo-legende p {
+  padding: 5px;
 }
 
 @media screen and (max-width: 768px) {
   .photo-container .photo-actions {
     display: block;
-  }
-}
-@keyframes infos-fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
   }
 }
 .hero {
