--- a/scss/partials/part_photo.scss
+++ b/scss/partials/part_photo.scss
@@ -22,10 +22,11 @@
     .photo-actions {
         display: none;
         position: absolute;
-        top: 20px;
-        left: 20px;
-        border: 1px solid black;
-        background-color: rgba(variables.$color-gris-2, 0.6);
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(black, 0.6);
         padding-top: 5px;
 
         button {
@@ -34,31 +35,41 @@
             cursor: pointer;
             transition: scale 0.3s;
 
+            &.btn-lightbox {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+            }
+
+            &.btn-infos {
+                position: absolute;
+                top: 50%;
+                right: 50%;
+            }
+
             &:hover {
                 scale: 1.2;
             }
 
             img {
-
                 width: 20px;
             }
         }
     }
 
-    .photo-infos {
+    .photo-legende {
         font-family: "Poppins";
         font-size: 12px;
         color: white;
-        background-color: rgba(black, 0.9);
-        border-radius: 8px;
-        padding: 10px;
         position: absolute;
-        left: 30px;
-        top: 60px;
-        display: none;
-        opacity: 0;
-        animation: infos-fade-in 0.3s ease-in-out;
-
+        left: 0px;
+        bottom: 0px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        p {
+            padding: 5px;
+        }
     }
 }
 
@@ -68,15 +79,5 @@
         .photo-actions {
             display: block;
         }
-    }
-}
-
-@keyframes infos-fade-in {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
     }
 }
