--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -414,7 +414,6 @@ footer .menu-menu-footer-container ul li a {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  padding-top: 5px;
 }
 .photo-container .photo-actions button {
   border: none;
@@ -451,6 +450,7 @@ footer .menu-menu-footer-container ul li a {
 }
 .photo-container .photo-legende p {
   padding: 5px;
+  margin-bottom: 0px;
 }
 
 @media screen and (max-width: 768px) {
