--- a/scss/partials/part_photo.scss
+++ b/scss/partials/part_photo.scss
@@ -27,7 +27,6 @@
         width: 100%;
         height: 100%;
         background-color: rgba(black, 0.6);
-        padding-top: 5px;
 
         button {
             border: none;
@@ -67,8 +66,11 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+
         p {
             padding: 5px;
+            margin-bottom: 0px;
+
         }
     }
 }
